--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="images/Doppler.png" alt="Doppler Picture, online pseudonym"> <!-- NOTE: sry="x" can be under the same folder as index.html (or within other folders located within) or a web address to an image file --></td>
+        <td><img src="Images/Doppler.png" alt="Doppler Picture, online pseudonym"> <!-- NOTE: sry="x" can be under the same folder as index.html (or within other folders located within) or a web address to an image file --></td>
         <td>
           <h1>Zachary Strohm</h1>
           <p><em>Manager at <a href="https://www.papajohns.com/">Papa John's</a>, <strong>hopefully</strong> something better later.</em></p> <!-- NOTE: The download attribute below can be placed anywhere within the <a> space as long as spaces seperate each attribute -->
